image zoom not visible fixed, and border added

--- a/stylesheets/products.css
+++ b/stylesheets/products.css
@@ -1,4 +1,4 @@
-/* 
+/*
 **************************************
 OmbuShop - Tu Tienda Online
 **************************************
@@ -182,9 +182,9 @@ ul.product-listing li.product {
 	-ms-box-shadow:     0 2px 3px rgba(0, 0, 0, 0.2);
 	-o-box-shadow:      0 2px 3px rgba(0, 0, 0, 0.2);
 	box-shadow:         0 2px 3px rgba(0, 0, 0, 0.2);
-	-webkit-transition: -webkit-box-shadow 0.2s; 
-	-moz-transition:    -moz-box-shadow 0.2s; 
-	-o-transition:      -o-box-shadow 0.2s; 
+	-webkit-transition: -webkit-box-shadow 0.2s;
+	-moz-transition:    -moz-box-shadow 0.2s;
+	-o-transition:      -o-box-shadow 0.2s;
 	transition:         box-shadow 0.2s;
 }
 ul.product-listing li.product:hover {
@@ -271,7 +271,7 @@ div.breadcrumbs li {
 	-ms-text-shadow:     0 1px 0 rgba(255, 255, 255, 0.5);
 	-o-text-shadow:      0 1px 0 rgba(255, 255, 255, 0.5);
 	text-shadow:         0 1px 0 rgba(255, 255, 255, 0.5);
-	
+
 }
 div.breadcrumbs li a {
 	color: #666;
@@ -528,9 +528,9 @@ div.in-product-social-container {
 	-ms-box-shadow:     0 2px 3px rgba(0, 0, 0, 0.2);
 	-o-box-shadow:      0 2px 3px rgba(0, 0, 0, 0.2);
 	box-shadow:         0 2px 3px rgba(0, 0, 0, 0.2);
-	-webkit-transition: -webkit-box-shadow 0.2s; 
-	-moz-transition:    -moz-box-shadow 0.2s; 
-	-o-transition:      -o-box-shadow 0.2s; 
+	-webkit-transition: -webkit-box-shadow 0.2s;
+	-moz-transition:    -moz-box-shadow 0.2s;
+	-o-transition:      -o-box-shadow 0.2s;
 	transition:         box-shadow 0.2s;
 	width: 708px;
 	padding-right: 20px;
@@ -549,7 +549,7 @@ div.in-product-social-container {
 	width: 450px;
 }
 #main-image {
-	overflow: auto;
+
 	margin-bottom: 30px;
 }
 #product-details #main-image img {
@@ -632,7 +632,7 @@ ul.thumbnails li img {
 }
 ul.thumbnails li:hover {  border-color: #ccc }
 ul.thumbnails li.selected {  border-color: #999 }
-#product-variants {  
+#product-variants {
   margin-bottom: 1.5em;
 }
 
@@ -732,4 +732,7 @@ p.prices {
 	top: 43px;
 	left: 0;
 	right: 0;
+}
+.cloud-zoom-big{
+	border: 1px solid #ddd;
 }
